Skip trailing junk data when flushing parser.

The parser should only return valid mpeg audio packets; it generally
does so, but in the case of flush, it returns whatever happens to
be in the buffer instead of ensuring its first a valid mpeg packet.

The fix is to check whether a valid frame size has been parsed and
if not discard the packet when flushing.

This should fix all sorts of mp3 files with trailing garbage.

Signed-off-by: Dale Curtis <dalecurtis@chromium.org>
Bug: 794782
Change-Id: I4ed8e5e31573f3dc6a3ff3872f4ae8fb9f294091
Reviewed-on: https://chromium-review.googlesource.com/935081
Reviewed-by: Xiaohan Wang <xhwang@chromium.org>